<?xml version="1.0" encoding="UTF-8"?><!-- Licensed to the Apache Software 
  Foundation (ASF) under one or more contributor license agreements. See the 
  NOTICE file distributed with this work for additional information regarding 
  copyright ownership. The ASF licenses this file to You under the Apache License, 
  Version 2.0 (the "License"); you may not use this file except in compliance 
  with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
  Unless required by applicable law or agreed to in writing, software distributed 
  under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
  OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
  the specific language governing permissions and limitations under the License. -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.apache.metron</groupId>
    <artifactId>Metron-Streaming</artifactId>
    <version>0.6BETA</version>
  </parent>
  <artifactId>Metron-DataLoads</artifactId>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>
  <dependencies>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${global_hbase_guava_version}</version>
    </dependency>
    <dependency>
      <groupId>org.mitre</groupId>
      <artifactId>stix</artifactId>
      <version>1.2.0.2</version>
    </dependency>
    <dependency>
      <groupId>org.apache.metron</groupId>
      <artifactId>Metron-Common</artifactId>
      <version>${project.parent.version}</version>
      <exclusions>
        <exclusion>
          <groupId>com.googlecode.disruptor</groupId>
          <artifactId>disruptor</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <!--dependency>
            <groupId>org.apache.storm</groupId>
            <artifactId>storm-core</artifactId>
            <version>${global_storm_version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <artifactId>servlet-api</artifactId>
                    <groupId>javax.servlet</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>log4j-over-slf4j</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
                <exclusion>
                    <groupId>com.googlecode.disruptor</groupId>
                    <artifactId>disruptor</artifactId>
                </exclusion>
            </exclusions>
        </dependency-->
        <dependency>
          <groupId>org.apache.hbase</groupId>
          <artifactId>hbase-client</artifactId>
          <version>${global_hbase_version}</version>
          <scope>provided</scope>
          <exclusions>
            <exclusion>
              <artifactId>log4j</artifactId>
              <groupId>log4j</groupId>
            </exclusion>
          </exclusions>
        </dependency>
        <dependency>
          <groupId>org.apache.hbase</groupId>
          <artifactId>hbase-server</artifactId>
          <version>${global_hbase_version}</version>
          <scope>provided</scope>
        </dependency>
        <dependency>
          <groupId>com.opencsv</groupId>
          <artifactId>opencsv</artifactId>
          <version>${global_opencsv_version}</version>
        </dependency>

        <dependency>
          <groupId>org.apache.hbase</groupId>
          <artifactId>hbase-testing-util</artifactId>
          <version>${global_hbase_version}</version>
          <scope>test</scope>
          <exclusions>
            <exclusion>
              <groupId>org.slf4j</groupId>
              <artifactId>slf4j-log4j12</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
        <!--dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${global_guava_version}</version>
        </dependency-->

        <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>log4j-over-slf4j</artifactId>
          <version>${global_slf4j_version}</version>
          <scope>test</scope>
        </dependency>


      </dependencies>
      <build>
        <resources>
          <resource>
            <directory>src</directory>
            <excludes>
              <exclude>**/*.java</exclude>
            </excludes>
          </resource>
        </resources>
        <plugins>
          <plugin>
            <!-- Separates the unit tests from the integration tests. -->
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.12.4</version>
            <configuration>
              <!-- Skip the default running of this plug-in (or everything is run twice...see below) -->
              <argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
              <skip>true</skip>
              <!-- Show 100% of the lines from the stack trace (doesn't work) -->
              <trimStackTrace>false</trimStackTrace>

            </configuration>
            <executions>
              <execution>
                <id>unit-tests</id>
                <phase>test</phase>
                <goals>
                  <goal>test</goal>
                </goals>
                <configuration>
                  <!-- Never skip running the tests when the test phase is invoked -->
                  <skip>false</skip>
                  <includes>
                    <!-- Include unit tests within integration-test phase. -->
                    <include>**/*Test.java</include>
                  </includes>
                  <excludes>
                    <!-- Exclude integration tests within (unit) test phase. -->
                    <exclude>**/*IntegrationTest.java</exclude>
                  </excludes>
                </configuration>
              </execution>
              <execution>
                <id>integration-tests</id>
                <phase>integration-test</phase>
                <goals>
                  <goal>test</goal>
                </goals>
                <configuration>
                  <!-- Never skip running the tests when the integration-test phase is invoked -->
                  <skip>false</skip>
                  <includes>
                    <!-- Include integration tests within integration-test phase. -->
                    <include>**/*IntegrationTest.java</include>
                  </includes>
                </configuration>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.1</version>
            <configuration>
              <source>1.7</source>
              <target>1.7</target>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>2.3</version>
            <executions>
              <execution>
                <phase>package</phase>
                <goals>
                  <goal>shade</goal>
                </goals>
                <configuration>
                  <relocations>
                    <relocation>
                      <pattern>com.google.common</pattern>
                      <shadedPattern>org.apache.metron.guava.dataload</shadedPattern>
                    </relocation>
                  </relocations>
                  <minimizeJar>true</minimizeJar>
                  <artifactSet>
                    <excludes>
                      <exclude>classworlds:classworlds</exclude>
                      <exclude>junit:junit</exclude>
                      <exclude>jmock:*</exclude>
                      <exclude>*:xml-apis</exclude>
                      <exclude>*slf4j*</exclude>
                      <exclude>org.apache.maven:lib:tests</exclude>
                      <exclude>log4j:log4j:jar:</exclude>
                      <exclude>*:hbase:*</exclude>
                      <exclude>org.apache.hadoop.yarn.util.package-info*</exclude>
                    </excludes>
                  </artifactSet>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <configuration>
              <descriptor>src/main/assembly/assembly.xml</descriptor>
            </configuration>
            <executions>
              <execution>
                <id>make-assembly</id> <!-- this is used for inheritance merges -->
                <phase>package</phase> <!-- bind to the packaging phase -->
                <goals>
                  <goal>single</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

        </plugins>
      </build>

    </project>
